change navbar to dark mode fixed homepage spacing

--- a/movies-db-ui/src/app/home/home.component.scss
+++ b/movies-db-ui/src/app/home/home.component.scss
@@ -1,3 +1,3 @@
 #home-container {
-  padding-top: 10px;
+  padding-top: 20px;
 }
